# RoshanSystem

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  README.md  main.py
Multiplatform Roshan System/RoshanSystem/: RoshanSystem.slnx
New Roshan System/Roshan System/: App.xaml  App.xaml.cs  Browser.xaml  Browser.xaml.cs  Calculator.xaml  Calculator.xaml.cs  Chilli.xaml  Chilli.xaml.cs  IMod.cs  MainWindow.xaml  MainWindow.xaml.cs  ModDetails.cs  ModList.xaml  ModList.xaml.cs  ModLoader.cs  Notepad.xaml  Notepad.xaml.cs  Overclocker.xaml  Overclocker.xaml.cs  Pong.xaml  Pong.xaml.cs  Roshan System.csproj  Roshan System.sln  Run.xaml  Run.xaml.cs  Startmenu.xaml  Startmenu.xaml.cs  winver.xaml  winver.xaml.cs
Old Roshan System/: main.py
Old Roshan System/functions/: notepad.py  startmenu.py
Old Roshan System/gui/: taskbar.py
Old Roshan System/ui/: calculator.py  notepad.py  taskbar.py
Roshan System - Python Version/: apps.json  login_details.json  login_page.py  main.py  settings.json
Roshan System - Python Version/gui/: calculator.py  fileexplorer.py  imageviewer.py  notepad.py  paint.py  run.py  startmenu.py  taskbar.py  terminal.py  window.py
Roshan System - Python Version/messagebox/: MessageboxOkCancel.py  MessageboxYesNo.py  __init__.py
RoshanOS-Cpp-version/: CMakeLists.txt  calculator.cpp  calculator.h  calculator.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
functions/: calculator.py  closeos.py  crash.py  notepad.py  overclocker.py
gui/: desktop.py  taskbar.py
(+28 files in other folders)
